fix: ui polish on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,6 @@
 
 body {
   background-color: rgba(#ccc, 0.45);
-  min-width: 400px;
 }
 
 img,
