--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -76,9 +76,9 @@
       display: flex;
       height: auto;
       justify-content: flex-start;
-      margin: 0 30px 10px;
+      margin: 0 5px 10px;
       overflow-x: auto;
-      padding: 20px;
+      padding: 10px 20px;
 
       li {
         border-radius: 15px;
