--- a/src/page-header/PageHeader.scss
+++ b/src/page-header/PageHeader.scss
@@ -34,6 +34,8 @@
 
     h1 {
       font-size: 20px;
+      padding: 0;
+      width: auto;
     }
 
     button {
